// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`arrow-functions.tsx - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
trailingComma: "all"
                                                      printWidth: 80 (default) |
=====================================input======================================
const f1 = <T,>() => 1;
const f2 = <
  Tttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttt,
>() => 1;

=====================================output=====================================
const f1 = <T,>() => 1;
const f2 = <
  Tttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttt,
>() => 1;

================================================================================
`;

exports[`arrow-functions.tsx - {"trailingComma":"es5"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
trailingComma: "es5"
                                                      printWidth: 80 (default) |
=====================================input======================================
const f1 = <T,>() => 1;
const f2 = <
  Tttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttt,
>() => 1;

=====================================output=====================================
const f1 = <T,>() => 1;
const f2 = <
  Tttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttt,
>() => 1;

================================================================================
`;

exports[`arrow-functions.tsx - {"trailingComma":"none"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
trailingComma: "none"
                                                      printWidth: 80 (default) |
=====================================input======================================
const f1 = <T,>() => 1;
const f2 = <
  Tttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttt,
>() => 1;

=====================================output=====================================
const f1 = <T,>() => 1;
const f2 = <
  Tttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttt,
>() => 1;

================================================================================
`;

exports[`invalid.ts - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
trailingComma: "all"
                                                      printWidth: 80 (default) |
=====================================input======================================
const {
  longKeySoThisWillGoOnMultipleLines,
  longKeySoThisWillGoOnMultipleLines2,
  longKeySoThisWillGoOnMultipleLines3,
  ...rest,
} = something;

=====================================output=====================================
const {
  longKeySoThisWillGoOnMultipleLines,
  longKeySoThisWillGoOnMultipleLines2,
  longKeySoThisWillGoOnMultipleLines3,
  ...rest
} = something;

================================================================================
`;

exports[`invalid.ts - {"trailingComma":"all"} format[yuku-ts] 1`] = `
"Rest element cannot have a trailing comma in object destructuring. (1:7)
> 1 | const {
    |       ^
> 2 |   longKeySoThisWillGoOnMultipleLines,
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 |   longKeySoThisWillGoOnMultipleLines2,
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 4 |   longKeySoThisWillGoOnMultipleLines3,
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 5 |   ...rest,
    | ^^^^^^^^^^
> 6 | } = something;
    | ^
  7 |"
`;

exports[`invalid.ts - {"trailingComma":"es5"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
trailingComma: "es5"
                                                      printWidth: 80 (default) |
=====================================input======================================
const {
  longKeySoThisWillGoOnMultipleLines,
  longKeySoThisWillGoOnMultipleLines2,
  longKeySoThisWillGoOnMultipleLines3,
  ...rest,
} = something;

=====================================output=====================================
const {
  longKeySoThisWillGoOnMultipleLines,
  longKeySoThisWillGoOnMultipleLines2,
  longKeySoThisWillGoOnMultipleLines3,
  ...rest
} = something;

================================================================================
`;

exports[`invalid.ts - {"trailingComma":"es5"} format[yuku-ts] 1`] = `
"Rest element cannot have a trailing comma in object destructuring. (1:7)
> 1 | const {
    |       ^
> 2 |   longKeySoThisWillGoOnMultipleLines,
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 |   longKeySoThisWillGoOnMultipleLines2,
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 4 |   longKeySoThisWillGoOnMultipleLines3,
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 5 |   ...rest,
    | ^^^^^^^^^^
> 6 | } = something;
    | ^
  7 |"
`;

exports[`invalid.ts - {"trailingComma":"none"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
trailingComma: "none"
                                                      printWidth: 80 (default) |
=====================================input======================================
const {
  longKeySoThisWillGoOnMultipleLines,
  longKeySoThisWillGoOnMultipleLines2,
  longKeySoThisWillGoOnMultipleLines3,
  ...rest,
} = something;

=====================================output=====================================
const {
  longKeySoThisWillGoOnMultipleLines,
  longKeySoThisWillGoOnMultipleLines2,
  longKeySoThisWillGoOnMultipleLines3,
  ...rest
} = something;

================================================================================
`;

exports[`invalid.ts - {"trailingComma":"none"} format[yuku-ts] 1`] = `
"Rest element cannot have a trailing comma in object destructuring. (1:7)
> 1 | const {
    |       ^
> 2 |   longKeySoThisWillGoOnMultipleLines,
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 |   longKeySoThisWillGoOnMultipleLines2,
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 4 |   longKeySoThisWillGoOnMultipleLines3,
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 5 |   ...rest,
    | ^^^^^^^^^^
> 6 | } = something;
    | ^
  7 |"
`;

exports[`trailing.ts - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
trailingComma: "all"
                                                      printWidth: 80 (default) |
=====================================input======================================
export class BaseSingleLevelProfileTargeting<
	T extends ValidSingleLevelProfileNode,
> {
}

enum Enum {
	x = 1,
	y = 2,
}

const {
  longKeySoThisWillGoOnMultipleLines,
  longKeySoThisWillGoOnMultipleLines2,
  longKeySoThisWillGoOnMultipleLines3,
  ...rest
} = something;

=====================================output=====================================
export class BaseSingleLevelProfileTargeting<
  T extends ValidSingleLevelProfileNode,
> {}

enum Enum {
  x = 1,
  y = 2,
}

const {
  longKeySoThisWillGoOnMultipleLines,
  longKeySoThisWillGoOnMultipleLines2,
  longKeySoThisWillGoOnMultipleLines3,
  ...rest
} = something;

================================================================================
`;

exports[`trailing.ts - {"trailingComma":"es5"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
trailingComma: "es5"
                                                      printWidth: 80 (default) |
=====================================input======================================
export class BaseSingleLevelProfileTargeting<
	T extends ValidSingleLevelProfileNode,
> {
}

enum Enum {
	x = 1,
	y = 2,
}

const {
  longKeySoThisWillGoOnMultipleLines,
  longKeySoThisWillGoOnMultipleLines2,
  longKeySoThisWillGoOnMultipleLines3,
  ...rest
} = something;

=====================================output=====================================
export class BaseSingleLevelProfileTargeting<
  T extends ValidSingleLevelProfileNode,
> {}

enum Enum {
  x = 1,
  y = 2,
}

const {
  longKeySoThisWillGoOnMultipleLines,
  longKeySoThisWillGoOnMultipleLines2,
  longKeySoThisWillGoOnMultipleLines3,
  ...rest
} = something;

================================================================================
`;

exports[`trailing.ts - {"trailingComma":"none"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
trailingComma: "none"
                                                      printWidth: 80 (default) |
=====================================input======================================
export class BaseSingleLevelProfileTargeting<
	T extends ValidSingleLevelProfileNode,
> {
}

enum Enum {
	x = 1,
	y = 2,
}

const {
  longKeySoThisWillGoOnMultipleLines,
  longKeySoThisWillGoOnMultipleLines2,
  longKeySoThisWillGoOnMultipleLines3,
  ...rest
} = something;

=====================================output=====================================
export class BaseSingleLevelProfileTargeting<
  T extends ValidSingleLevelProfileNode
> {}

enum Enum {
  x = 1,
  y = 2
}

const {
  longKeySoThisWillGoOnMultipleLines,
  longKeySoThisWillGoOnMultipleLines2,
  longKeySoThisWillGoOnMultipleLines3,
  ...rest
} = something;

================================================================================
`;

exports[`type-arguments.ts - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
trailingComma: "all"
                                                      printWidth: 80 (default) |
=====================================input======================================
var bar: Bar<
  AAAAAAA,
  BBBBBBB,
  CCCCCCC,
  DDDDDDD,
  EEEEEEE,
  FFFFFFF,
  GGGGGGG,
  HHHHHHH
>;

const baz = new Array<
  FooFooFooFooFooFooFooFooFooFooFooFooFooFooFoo,
  BarBarBarBarBarBarBarBarBarBarBarBarBarBarBar
>();

=====================================output=====================================
var bar: Bar<
  AAAAAAA,
  BBBBBBB,
  CCCCCCC,
  DDDDDDD,
  EEEEEEE,
  FFFFFFF,
  GGGGGGG,
  HHHHHHH
>;

const baz = new Array<
  FooFooFooFooFooFooFooFooFooFooFooFooFooFooFoo,
  BarBarBarBarBarBarBarBarBarBarBarBarBarBarBar
>();

================================================================================
`;

exports[`type-arguments.ts - {"trailingComma":"es5"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
trailingComma: "es5"
                                                      printWidth: 80 (default) |
=====================================input======================================
var bar: Bar<
  AAAAAAA,
  BBBBBBB,
  CCCCCCC,
  DDDDDDD,
  EEEEEEE,
  FFFFFFF,
  GGGGGGG,
  HHHHHHH
>;

const baz = new Array<
  FooFooFooFooFooFooFooFooFooFooFooFooFooFooFoo,
  BarBarBarBarBarBarBarBarBarBarBarBarBarBarBar
>();

=====================================output=====================================
var bar: Bar<
  AAAAAAA,
  BBBBBBB,
  CCCCCCC,
  DDDDDDD,
  EEEEEEE,
  FFFFFFF,
  GGGGGGG,
  HHHHHHH
>;

const baz = new Array<
  FooFooFooFooFooFooFooFooFooFooFooFooFooFooFoo,
  BarBarBarBarBarBarBarBarBarBarBarBarBarBarBar
>();

================================================================================
`;

exports[`type-arguments.ts - {"trailingComma":"none"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
trailingComma: "none"
                                                      printWidth: 80 (default) |
=====================================input======================================
var bar: Bar<
  AAAAAAA,
  BBBBBBB,
  CCCCCCC,
  DDDDDDD,
  EEEEEEE,
  FFFFFFF,
  GGGGGGG,
  HHHHHHH
>;

const baz = new Array<
  FooFooFooFooFooFooFooFooFooFooFooFooFooFooFoo,
  BarBarBarBarBarBarBarBarBarBarBarBarBarBarBar
>();

=====================================output=====================================
var bar: Bar<
  AAAAAAA,
  BBBBBBB,
  CCCCCCC,
  DDDDDDD,
  EEEEEEE,
  FFFFFFF,
  GGGGGGG,
  HHHHHHH
>;

const baz = new Array<
  FooFooFooFooFooFooFooFooFooFooFooFooFooFooFoo,
  BarBarBarBarBarBarBarBarBarBarBarBarBarBarBar
>();

================================================================================
`;

exports[`type-parameters-vs-arguments.ts - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
trailingComma: "all"
                                                      printWidth: 80 (default) |
=====================================input======================================
class FooClass<
	A,
	B,
	C,
> {
	a: A;
	b: B;
	c: C;
}

const instance = new FooClass<
	boolean,
	number,
	string, // [ts] Trailing comma not allowed.
	>();

=====================================output=====================================
class FooClass<A, B, C> {
  a: A;
  b: B;
  c: C;
}

const instance = new FooClass<
  boolean,
  number,
  string // [ts] Trailing comma not allowed.
>();

================================================================================
`;

exports[`type-parameters-vs-arguments.ts - {"trailingComma":"es5"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
trailingComma: "es5"
                                                      printWidth: 80 (default) |
=====================================input======================================
class FooClass<
	A,
	B,
	C,
> {
	a: A;
	b: B;
	c: C;
}

const instance = new FooClass<
	boolean,
	number,
	string, // [ts] Trailing comma not allowed.
	>();

=====================================output=====================================
class FooClass<A, B, C> {
  a: A;
  b: B;
  c: C;
}

const instance = new FooClass<
  boolean,
  number,
  string // [ts] Trailing comma not allowed.
>();

================================================================================
`;

exports[`type-parameters-vs-arguments.ts - {"trailingComma":"none"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
trailingComma: "none"
                                                      printWidth: 80 (default) |
=====================================input======================================
class FooClass<
	A,
	B,
	C,
> {
	a: A;
	b: B;
	c: C;
}

const instance = new FooClass<
	boolean,
	number,
	string, // [ts] Trailing comma not allowed.
	>();

=====================================output=====================================
class FooClass<A, B, C> {
  a: A;
  b: B;
  c: C;
}

const instance = new FooClass<
  boolean,
  number,
  string // [ts] Trailing comma not allowed.
>();

================================================================================
`;
